--- a/Reformat Files/Create_Combined_Table.ipynb
+++ b/Reformat Files/Create_Combined_Table.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -280,22 +280,20 @@
     "df_2012 = reformat_2012()\n",
     "\n",
     "df_2012 = add_columns(df_2012, combined_df)\n",
+    "new_quantities = []\n",
+    "for val in list(df_2012['Quantity']):\n",
+    "    if type(val) == float:\n",
+    "        new_quantities.append(str(int(val)))\n",
+    "    else:\n",
+    "        new_quantities.append(val)\n",
+    "df_2012['Quantity'] = new_quantities\n",
     "\n",
     "combined_df = pd.concat([df_2012,combined_df], axis=0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -334,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -343,7 +341,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Program Files\\Anaconda2\\lib\\site-packages\\ipykernel\\__main__.py:23: SettingWithCopyWarning: \n",
+      "/home/shad/anaconda2/lib/python2.7/site-packages/ipykernel/__main__.py:23: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -361,16 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 17,
    "metadata": {
     "collapsed": true
    },
@@ -394,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -409,16 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 19,
    "metadata": {
     "collapsed": true
    },
@@ -445,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -462,16 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 21,
    "metadata": {
     "collapsed": true
    },
@@ -499,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
@@ -510,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
@@ -522,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
@@ -533,27 +504,217 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 26,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Time</th>\n",
+       "      <th>Weather &amp; Air Temp:</th>\n",
+       "      <th>Water Temp:</th>\n",
+       "      <th>Tide Times</th>\n",
+       "      <th>Tide is moving</th>\n",
+       "      <th>DO</th>\n",
+       "      <th>pH</th>\n",
+       "      <th>Salinity</th>\n",
+       "      <th>Turbidity</th>\n",
+       "      <th># student seiners (CLASSES ONLY)</th>\n",
+       "      <th># of visitors (Public Seine ONLY)</th>\n",
+       "      <th>Instructors/ Seine Staff:</th>\n",
+       "      <th># Hauls</th>\n",
+       "      <th>Scientific Name</th>\n",
+       "      <th>Common Name</th>\n",
+       "      <th>Quantity</th>\n",
+       "      <th># Brought to Ed Center</th>\n",
+       "      <th>Other info (Gender, Length, Dead/Alive, other physical description)</th>\n",
+       "      <th>NOTES FROM SEINEING SEASON:</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>33</th>\n",
+       "      <td>4/25/2012</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Shrimp (Shore and Mud)</td>\n",
+       "      <td>7</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34</th>\n",
+       "      <td>4/25/2012</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Shrimp (Seven Spine)</td>\n",
+       "      <td>12</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>35</th>\n",
+       "      <td>4/25/2012</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Snail</td>\n",
+       "      <td>2</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>38</th>\n",
+       "      <td>4/25/2012</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Striped Bass</td>\n",
+       "      <td>1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>40</th>\n",
+       "      <td>4/25/2012</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Turnicate</td>\n",
+       "      <td>1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         Date Time Weather & Air Temp: Water Temp: Tide Times Tide is moving  \\\n",
+       "33  4/25/2012  NaN                 NaN         NaN        NaN            NaN   \n",
+       "34  4/25/2012  NaN                 NaN         NaN        NaN            NaN   \n",
+       "35  4/25/2012  NaN                 NaN         NaN        NaN            NaN   \n",
+       "38  4/25/2012  NaN                 NaN         NaN        NaN            NaN   \n",
+       "40  4/25/2012  NaN                 NaN         NaN        NaN            NaN   \n",
+       "\n",
+       "     DO   pH Salinity Turbidity # student seiners (CLASSES ONLY)  \\\n",
+       "33  NaN  NaN      NaN       NaN                              NaN   \n",
+       "34  NaN  NaN      NaN       NaN                              NaN   \n",
+       "35  NaN  NaN      NaN       NaN                              NaN   \n",
+       "38  NaN  NaN      NaN       NaN                              NaN   \n",
+       "40  NaN  NaN      NaN       NaN                              NaN   \n",
+       "\n",
+       "   # of visitors (Public Seine ONLY) Instructors/ Seine Staff: # Hauls  \\\n",
+       "33                               NaN                       NaN     NaN   \n",
+       "34                               NaN                       NaN     NaN   \n",
+       "35                               NaN                       NaN     NaN   \n",
+       "38                               NaN                       NaN     NaN   \n",
+       "40                               NaN                       NaN     NaN   \n",
+       "\n",
+       "   Scientific Name             Common Name Quantity # Brought to Ed Center  \\\n",
+       "33             NaN  Shrimp (Shore and Mud)        7                    NaN   \n",
+       "34             NaN    Shrimp (Seven Spine)       12                    NaN   \n",
+       "35             NaN                   Snail        2                    NaN   \n",
+       "38             NaN            Striped Bass        1                    NaN   \n",
+       "40             NaN               Turnicate        1                    NaN   \n",
+       "\n",
+       "   Other info (Gender, Length, Dead/Alive, other physical description)  \\\n",
+       "33                                                NaN                    \n",
+       "34                                                NaN                    \n",
+       "35                                                NaN                    \n",
+       "38                                                NaN                    \n",
+       "40                                                NaN                    \n",
+       "\n",
+       "   NOTES FROM SEINEING SEASON:  \n",
+       "33                         NaN  \n",
+       "34                         NaN  \n",
+       "35                         NaN  \n",
+       "38                         NaN  \n",
+       "40                         NaN  "
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# might not be giving na, could replace blanks with nan, and then switch back after"
+    "combined_df[combined_df['Date'] ==\"4/25/2012\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false
    },
@@ -564,7 +725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 28,
    "metadata": {
     "collapsed": true
    },
@@ -575,7 +736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 104,
    "metadata": {
     "collapsed": true
    },
@@ -586,7 +747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 105,
    "metadata": {
     "collapsed": true
    },
@@ -595,6 +756,55 @@
     "#4/25/2012 and 9/27/2012 and 10/4/2012 and 10/10/2012 didn't record the amount of fish caught\n",
     "#Got up to 2016"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# fixed, go clean up random lines of checking now"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "combined_df.to_csv('../Created CSVs/all_seins_all_data_reformatted.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
