--- a/Create_Species_Count_By_Year_CSV.ipynb
+++ b/Create_Species_Count_By_Year_CSV.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -13,18 +13,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 3,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "fish_df = pd.read_csv('Name_Corrected_All_Seins.csv')"
+    "fish_df = pd.read_csv('Created CSVs/Non_Combined_Name_Corrected_All_Seins.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -114,50 +114,50 @@
        "      <td>0</td>\n",
        "      <td>2008-09-13 00:00:00</td>\n",
        "      <td>1</td>\n",
-       "      <td>tunicates</td>\n",
+       "      <td>sea squirt</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>1</td>\n",
        "      <td>2008-09-13 00:00:00</td>\n",
        "      <td>1</td>\n",
-       "      <td>shrimp</td>\n",
+       "      <td>shore shrimp</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>2</td>\n",
        "      <td>2008-09-13 00:00:00</td>\n",
        "      <td>1</td>\n",
-       "      <td>shrimp</td>\n",
+       "      <td>mantis shrimp</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>3</td>\n",
        "      <td>2008-09-13 00:00:00</td>\n",
        "      <td>1</td>\n",
-       "      <td>shrimp</td>\n",
+       "      <td>sand shrimp</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>4</td>\n",
        "      <td>2008-09-13 00:00:00</td>\n",
        "      <td>1</td>\n",
-       "      <td>hermit crab</td>\n",
+       "      <td>unidentified hermit crab</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Unnamed: 0                 Date Number Caught      Species\n",
-       "0           0  2008-09-13 00:00:00             1    tunicates\n",
-       "1           1  2008-09-13 00:00:00             1       shrimp\n",
-       "2           2  2008-09-13 00:00:00             1       shrimp\n",
-       "3           3  2008-09-13 00:00:00             1       shrimp\n",
-       "4           4  2008-09-13 00:00:00             1  hermit crab"
+       "   Unnamed: 0                 Date Number Caught                   Species\n",
+       "0           0  2008-09-13 00:00:00             1                sea squirt\n",
+       "1           1  2008-09-13 00:00:00             1              shore shrimp\n",
+       "2           2  2008-09-13 00:00:00             1             mantis shrimp\n",
+       "3           3  2008-09-13 00:00:00             1               sand shrimp\n",
+       "4           4  2008-09-13 00:00:00             1  unidentified hermit crab"
       ]
      },
-     "execution_count": 140,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -240,7 +240,7 @@
        "892"
       ]
      },
-     "execution_count": 143,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -314,50 +314,50 @@
        "      <td>0</td>\n",
        "      <td>2008-09-13 00:00:00</td>\n",
        "      <td>1</td>\n",
-       "      <td>tunicates</td>\n",
+       "      <td>sea squirt</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>1</td>\n",
        "      <td>2008-09-13 00:00:00</td>\n",
        "      <td>1</td>\n",
-       "      <td>shrimp</td>\n",
+       "      <td>shore shrimp</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>2</td>\n",
        "      <td>2008-09-13 00:00:00</td>\n",
        "      <td>1</td>\n",
-       "      <td>shrimp</td>\n",
+       "      <td>mantis shrimp</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>3</td>\n",
        "      <td>2008-09-13 00:00:00</td>\n",
        "      <td>1</td>\n",
-       "      <td>shrimp</td>\n",
+       "      <td>sand shrimp</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>4</td>\n",
        "      <td>2008-09-13 00:00:00</td>\n",
        "      <td>1</td>\n",
-       "      <td>hermit crab</td>\n",
+       "      <td>unidentified hermit crab</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Unnamed: 0                 Date  Number Caught      Species\n",
-       "0           0  2008-09-13 00:00:00              1    tunicates\n",
-       "1           1  2008-09-13 00:00:00              1       shrimp\n",
-       "2           2  2008-09-13 00:00:00              1       shrimp\n",
-       "3           3  2008-09-13 00:00:00              1       shrimp\n",
-       "4           4  2008-09-13 00:00:00              1  hermit crab"
+       "   Unnamed: 0                 Date  Number Caught                   Species\n",
+       "0           0  2008-09-13 00:00:00              1                sea squirt\n",
+       "1           1  2008-09-13 00:00:00              1              shore shrimp\n",
+       "2           2  2008-09-13 00:00:00              1             mantis shrimp\n",
+       "3           3  2008-09-13 00:00:00              1               sand shrimp\n",
+       "4           4  2008-09-13 00:00:00              1  unidentified hermit crab"
       ]
      },
-     "execution_count": 146,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -379,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
@@ -390,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
@@ -410,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -432,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -452,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 19,
    "metadata": {
     "collapsed": true
    },
@@ -463,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -474,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 21,
    "metadata": {
     "collapsed": true
    },
@@ -485,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
@@ -497,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
@@ -509,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
@@ -535,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false
    },
@@ -546,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false
    },
@@ -558,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false
    },
@@ -578,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 28,
    "metadata": {
     "collapsed": false
    },
@@ -598,7 +598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 29,
    "metadata": {
     "collapsed": false
    },
