--- a/Graph Number of Organisms and Species Caught.ipynb
+++ b/Graph Number of Organisms and Species Caught.ipynb
@@ -15,8 +15,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Not sure if this is just repeat and not important"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -27,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -48,60 +55,60 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>2008-09-13 00:00:00</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>tunicates</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>2008-09-13 00:00:00</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>shrimp</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
+       "      <th>887</th>\n",
+       "      <td>893</td>\n",
+       "      <td>2017-09-17 00:00:00</td>\n",
        "      <td>2</td>\n",
-       "      <td>2008-09-13 00:00:00</td>\n",
-       "      <td>NaN</td>\n",
        "      <td>shrimp</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>3</td>\n",
-       "      <td>2008-09-13 00:00:00</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>shrimp</td>\n",
+       "      <th>888</th>\n",
+       "      <td>894</td>\n",
+       "      <td>2017-10-07 00:00:00</td>\n",
+       "      <td>TMTC</td>\n",
+       "      <td>comb jelly</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
+       "      <th>889</th>\n",
+       "      <td>895</td>\n",
+       "      <td>2017-10-07 00:00:00</td>\n",
+       "      <td>14</td>\n",
+       "      <td>asian shore crab</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>890</th>\n",
+       "      <td>896</td>\n",
+       "      <td>2017-10-07 00:00:00</td>\n",
        "      <td>4</td>\n",
-       "      <td>2008-09-13 00:00:00</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>hermit crab</td>\n",
+       "      <td>sea snail</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>891</th>\n",
+       "      <td>897</td>\n",
+       "      <td>2017-10-07 00:00:00</td>\n",
+       "      <td>9</td>\n",
+       "      <td>sea snail</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Unnamed: 0                 Date Number Caught      Species\n",
-       "0           0  2008-09-13 00:00:00           NaN    tunicates\n",
-       "1           1  2008-09-13 00:00:00           NaN       shrimp\n",
-       "2           2  2008-09-13 00:00:00           NaN       shrimp\n",
-       "3           3  2008-09-13 00:00:00           NaN       shrimp\n",
-       "4           4  2008-09-13 00:00:00           NaN  hermit crab"
+       "     Unnamed: 0                 Date Number Caught           Species\n",
+       "887         893  2017-09-17 00:00:00             2            shrimp\n",
+       "888         894  2017-10-07 00:00:00          TMTC        comb jelly\n",
+       "889         895  2017-10-07 00:00:00            14  asian shore crab\n",
+       "890         896  2017-10-07 00:00:00             4         sea snail\n",
+       "891         897  2017-10-07 00:00:00             9         sea snail"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "fish_df.head()"
+    "fish_df.tail()"
    ]
   },
   {
@@ -1090,6 +1097,18 @@
    "display_name": "Python [conda root]",
    "language": "python",
    "name": "conda-root-py"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 2
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython2",
+   "version": "2.7.12"
   }
  },
  "nbformat": 4,
