--- a/Reformat Files/CleanEverything_Make_Clean_For_Analysis_All_Data.ipynb
+++ b/Reformat Files/CleanEverything_Make_Clean_For_Analysis_All_Data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -168,16 +168,38 @@
     "        if len(DO) == 0:\n",
     "            cleaned_list.append(np.NaN)\n",
     "        else:\n",
-    "            cleaned_list.append(int(DO[0]))\n",
+    "            cleaned_list.append(float(DO[0]))\n",
     "       \n",
     "    return cleaned_list"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 19,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "#df[df[\"DO\"] == \"4.5\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "#set(df['DO'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -186,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 22,
    "metadata": {
     "collapsed": true
    },
@@ -197,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 23,
    "metadata": {
     "collapsed": true
    },
@@ -213,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 24,
    "metadata": {
     "collapsed": true
    },
@@ -250,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false
    },
@@ -271,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false
    },
@@ -293,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false
    },
@@ -304,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 28,
    "metadata": {
     "collapsed": false
    },
@@ -315,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 29,
    "metadata": {
     "collapsed": false
    },
@@ -328,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 30,
    "metadata": {
     "collapsed": false
    },
@@ -339,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 31,
    "metadata": {
     "collapsed": false
    },
@@ -350,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 32,
    "metadata": {
     "collapsed": false
    },
@@ -361,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 33,
    "metadata": {
     "collapsed": true
    },
@@ -372,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 34,
    "metadata": {
     "collapsed": true
    },
@@ -383,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 35,
    "metadata": {
     "collapsed": true
    },
@@ -395,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 36,
    "metadata": {
     "collapsed": true
    },
@@ -417,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 37,
    "metadata": {
     "collapsed": false
    },
@@ -455,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 51,
    "metadata": {
     "collapsed": false
    },
@@ -487,7 +509,8 @@
     "               'mud snail': 'sea snail', 'oyster drill snail': 'sea snail', 'snail': 'sea snail', 'whelk snail':'sea snail', 'snail eggs': 'sea snail', 'sea bass': 'black sea bass',\n",
     "               'sheepshead porgy': 'porgy', 'striped searobin': 'sea robin', 'black fingered mud crab': 'mud crab', 'clam worm probably nereis spp': 'polychaete worm',\n",
     "               'poly worm': 'polychaete worm', 'sandworm': 'polychaete worm', 'white fingered mud crab': 'mud crab', 'decoration crab': 'spider crab',\n",
-    "               'hydra medusa': 'hydrozoa', 'hydroid': 'hydrozoa', 'hydromedusae' : 'hydrozoa', 'red beard sponge': 'sponge', ' american shad': 'american shad'}\n",
+    "               'hydra medusa': 'hydrozoa', 'hydroid': 'hydrozoa', 'hydromedusae' : 'hydrozoa', 'red beard sponge': 'sponge', ' american shad': 'american shad',\n",
+    "                   \"long clawed hermit crab\": \"hermit crab\"}\n",
     "    for i in range(len(fish_list)):\n",
     "        if fish_list[i] in name_changes:\n",
     "            fish_list[i] = name_changes[fish_list[i]]\n",
@@ -496,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 39,
    "metadata": {
     "collapsed": false
    },
@@ -507,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 52,
    "metadata": {
     "collapsed": false
    },
@@ -518,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 44,
    "metadata": {
     "collapsed": false
    },
@@ -526,10 +549,10 @@
     {
      "data": {
       "text/plain": [
-       "918"
+       "1022"
       ]
      },
-     "execution_count": 120,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -537,6 +560,48 @@
    "source": [
     "len(group)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1022"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(nogroup)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "#set(group)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -580,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 55,
    "metadata": {
     "collapsed": false
    },
@@ -591,7 +656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 56,
    "metadata": {
     "collapsed": true
    },
@@ -602,7 +667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 57,
    "metadata": {
     "collapsed": false
    },
@@ -636,7 +701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 58,
    "metadata": {
     "collapsed": false
    },
@@ -647,7 +712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 59,
    "metadata": {
     "collapsed": false
    },
@@ -669,7 +734,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 128,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -680,7 +745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 60,
    "metadata": {
     "collapsed": false
    },
@@ -698,7 +763,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 61,
    "metadata": {
     "collapsed": false
    },
@@ -709,7 +774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 62,
    "metadata": {
     "collapsed": false
    },
@@ -728,13 +793,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 64,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "#df"
+    "df.to_csv('../Created CSVs/Cleaned_For_Analysis_All_Data.csv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## SKIPPING THIS FOR NOW"
    ]
   },
   {
