--- a/Correct_Fish_Names_In_All_Seins_CSV_And_Make_Combined_Name_Corrected_All_Seins_CSV.ipynb
+++ b/Correct_Fish_Names_In_All_Seins_CSV_And_Make_Combined_Name_Corrected_All_Seins_CSV.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -24,7 +24,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -32,10 +43,10 @@
     {
      "data": {
       "text/plain": [
-       "292"
+       "308"
       ]
      },
-     "execution_count": 128,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -46,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -63,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -74,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -86,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
